# vectordb

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  check_ready.sh  list_git_files.sh  migrate_from_chromadb.py  requirements.txt  vectordb_client.py
benches/: search_benchmark.rs
src/: client.rs  collection.rs  distance.rs  error.rs  filter.rs  ivf.rs  kmeans.rs  lib.rs  main.rs  storage.rs  vector.rs
